mimos/clip-mint/mint/mint-app-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mintapp
  namespace: clip-mint
spec:
  replicas: 1
  template:
    metadata:
      labels:
        servis: app
    spec:
      containers:
      - name: app
        image: mifrepo.mimos.my:443/mi-clip_mi-int/mint.app
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            protocol: TCP
      imagePullSecrets:
        - name: mifrepo
