mimos/clip-mint/mint/mint-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mintapp 
  namespace: clip-mint
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    servis: app
