mimos/clip-mint/mint/mint-kb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mintkb
  namespace: clip-mint
spec:
  # In a production setup, we recommend accessing Grafana through an external Loadbalancer
  # or through a public IP.
  # type: LoadBalancer
  # You could also use NodePort to expose the service at a randomly-generated port
  # type: NodePort
  type: NodePort
  ports:
  - port: 10035
    targetPort: 10035
  selector:
    servis: knowledge-base
